# sdl-learning

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  premake5.lua  x.py
07_texture_loading_and_rendering/: 07_texture_loading_and_rendering.cpp
10_color_keying/: 10_color_keying.cpp
11_clip_rendering_and_sprite_sheets/: 11_clip_rendering_and_sprite_sheets.cpp
12_color_modulation/: 12_color_modulation.cpp
13_alpha_blending/: 13_alpha_blending.cpp
14_animated_sprites_and_vsync/: 14_animated_sprites_and_vsync.cpp
15_rotation_and_flipping/: 15_rotation_and_flipping.cpp
16_true_type_fonts/: 16_true_type_fonts.cpp
17_mouse_events/: 17_mouse_events.cpp
old/: 07-texture.cpp  08-render-basic-shapes.cpp  09-viewport.cpp  11_texture_clip.cpp  12_color_modulation.cpp  13_alpha_blending.cpp  14_animations.cpp  15_rotation_flipping.cpp  16_ttf.cpp  main-image.cpp
src/: main.cpp
src/animation/: animation.cpp  animation.h
src/character/: character.h  warrior.cpp  warrior.h
src/core/: engine.cpp  engine.h
src/graphics/: texture_manager.cpp  texture_manager.h
src/input/: input.cpp  input.h
src/object/: game_object.h  object.h
src/physics/: rigid_body.h  transform.h  vector_2d.h
src/timer/: timer.cpp  timer.h
